--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>Kogut kontra śmieciarze</title>
+    <title>Brygada Brawurowych Kur kontra śmieciarze</title>
     <style>
         body {
             background: #216038;
