--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
 </head>
 <body>
 <div id="main-wrap">
-    <h1 style="text-align:center;color:#fffde7;">Brygada Brawurowych Kur kontra śmieciarze</h1>
+    <h1 style="text-align:center;color:#fffde7;">Brygada Brawurowych Kur kontra źli śmieciarze</h1>
     <div id="game-info"></div>
     <canvas id="gameCanvas" width="700" height="500"></canvas>
     <div id="desc">
-        Miasto zostało opanowane przez złych śmieciarzy. Tylko Brygada Brawurowych Kur może ich powstrzymać!
+        Miasto zostało opanowane przez złych śmieciarzy. Powstrzymać może ich tylko załoga kurzego patrolu, na czele którego stoi kapitan Strzała!
     </div>
     <div style="display: flex; flex-wrap: wrap; justify-content: space-between; align-items: flex-start; gap: 20px;">
 <div id="instructions" style="flex:1;">
         <b>Instrukcja gry:</b><br>
-        Steruj kurą (strzałki lewo/prawo).<br>
-        Strzelaj spacją do śmieci.<br>
+        Steruj kurą strzałkami lub myszką.<br>
+        Strzelaj spacją lub myszką do śmieci. Na telefonie steruj i strzelaj palcem.<br>
         Punkty: psia mina – 3 pkt, butelka – 2 pkt, reszta – 1 pkt.<br>
-        Masz 60 sekund! Powodzenia, kapitanie Strzało!
+        Masz 60 sekund! Powodzenia, życzy kapitan Strzała!
     </div>
     <button id="newgame">Nowa gra</button>
     </div>
